[package]
name = "skanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = {version="0.2"}
rand = {version="0.9"}
openssl = { version = "0.10.66"}
openssl-sys={version = "0.9.103"}
rayon={version = "1.10"}
