[package]
name = "skanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# windows dependencies


[target."cfg(windows)".dependencies.windows-sys]
version = "0.59"
features = ["Win32_Networking_WinSock", "Win32_Foundation"]
[target."cfg(windows)".dependencies.native-tls]
version = "0.2"

[target."cfg(unix)".dependencies]
libc = {version="0.2"}
openssl = { version = "0.10" }




[dependencies]

rand = {version="0.9"}
rayon={version = "1.10"}


